add commit fix sonar code smells